# agentRAG

./: README.md
agentic-rag/: apikey_test.py  chunk_01.py  chunk_02.py  create_agent.py  index_create.py  key_road.py  pinecone_connect.py  pyproject.toml  setup_test.py  vecter_change.py
agentic-skill/github/: copilot-instructions.md
agentic-skill/github/instructions/: adapters.instructions.md  core.instructions.md  tests.instructions.md
agentic-skill/github/prompts/: p1-foundation.prompt.md  p2-pipeline.prompt.md  p3-agent.prompt.md  p4-evaluation.prompt.md  p5-adapters.prompt.md  p6-scripts.prompt.md
agentic-skill/github/skills/tdd/: SKILL.md
rag_workspace/: AI코딩가이드.md  pyproject.toml
rag_workspace/eval/: __init__.py  eval_set.py
rag_workspace/src/agentic_rag/: __init__.py  config.py  evaluation.py  generation.py  grading.py  models.py  ports.py  retrieval.py  rewrite.py  router.py
rag_workspace/tests/: __init__.py  conftest.py  test_eval_set.py  test_evaluation.py  test_foundation_smoke.py  test_generation.py  test_grading.py  test_graph.py  test_retrieval.py  test_rewrite.py  test_router.py
